--- a/pdf-export/patterns-of-contracts/contract-gas-fo.html
+++ b/pdf-export/patterns-of-contracts/contract-gas-fo.html
@@ -601,9 +601,16 @@
                 prodloužením v pozdější době, než je uvedeno v této Smlouvě, platí lhůta pro takové ukončení dle právních předpisů.
             </p>
             <h3>G.6 Změna smlouvy na dobu neurčitou a roční úprava ceny a obchodních podmínek</h3>
-            <p>Smluvní strany se dohodly, že po uplynutí 36 měsíců od předpokládaného data zahájení dodávky, nejdříve však 1.1.2025, se tato Smlouva stane smlouvou uzavřenou na dobu neurčitou. Stanoví-li právní předpis dřívější okamžik, od kterého se Smlouva považuje za smlouvu na dobu neurčitou, má přednost ustanovení právního předpisu. Smlouvu uzavřenou na dobu neurčitou je každá ze smluvních stran oprávněna bez uvedení důvodu vypovědět. Délka výpovědní doby činí 3 měsíce a začíná běžet prvním dnem kalendářního měsíce následujícího po doručení výpovědi. Poté, co se Smlouva stane smlouvou uzavřenou na dobu neurčitou, bude i nadále každý rok prováděna aktualizace ceny dodávky a Obchodních podmínek PXE pro dodávky plynu pro smlouvy uzavřené na trhu PXE „PARC4U“ (dále jen „<b>Obchodní podmínky</b>“). Aktualizace ceny dodávky a Obchodních podmínek se provede vždy s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „<b>Den výročí</b>“). Zákazník bude 30. den přede Dnem výročí e-mailem vždy informován o nové ceně dodávky a novém znění Obchodních podmínek. Novou cenou dodávky bude cena aktuální k 30. dni přede Dnem výročí, Novým zněním obchodních podmínek budou Obchodní podmínky aktuální k 30. dni přede Dnem výročí. Pro určení výše nové ceny dodávky jinak platí shodná pravidla, jaká jsou uvedena v bodě G.5. Dodavatel není povinen ode Dne výročí poskytovat Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí  jako součást dodávky komodity nenabízí.</p>
+            <p class="mb-20">Smluvní strany se dohodly, že po uplynutí 36 měsíců od předpokládaného data zahájení dodávky, nejdříve však 1.1.2025, se tato Smlouva stane smlouvou uzavřenou na dobu neurčitou. Stanoví-li právní předpis dřívější okamžik, od kterého se Smlouva považuje za smlouvu na dobu neurčitou, má přednost ustanovení právního předpisu. Smlouvu uzavřenou na dobu neurčitou je každá ze smluvních stran oprávněna bez uvedení důvodu vypovědět. Délka výpovědní doby činí 3 měsíce a začíná běžet prvním dnem kalendářního měsíce následujícího po doručení výpovědi. Poté, co se Smlouva stane smlouvou uzavřenou na dobu neurčitou, bude i nadále každý rok prováděna aktualizace ceny dodávky a Obchodních podmínek PXE pro dodávky plynu pro smlouvy uzavřené na trhu PXE „PARC4U“ (dále jen „<b>Obchodní podmínky</b>“). Aktualizace ceny dodávky a Obchodních podmínek se provede vždy s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „<b>Den výročí</b>“). Zákazník bude 30. den přede Dnem výročí e-mailem vždy informován o nové ceně dodávky a novém znění Obchodních podmínek. Novou cenou dodávky bude cena aktuální k 30. dni přede Dnem výročí, Novým zněním obchodních podmínek budou Obchodní podmínky aktuální k 30. dni přede Dnem výročí. Pro určení výše nové ceny dodávky jinak platí shodná pravidla, jaká jsou uvedena v bodě G.5. Dodavatel není povinen ode Dne výročí poskytovat Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí  jako součást dodávky komodity nenabízí.</p>
             <h3>G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
-            <p>Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při aktualizaci ceny dodávky či Obchodních podmínek dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení regulované složky ceny, daní nebo poplatků) nebo změně jiných smluvních podmínek (s výjimkou změny vyvolané změnou právního předpisu) má zákazník právo kdykoliv do desátého dne přede dnem účinnosti zvýšení ceny nebo změny jiných smluvních podmínek tuto Smlouvu vypovědět, a to s účinností ke dni bezprostředně předcházejícímu dni účinnosti zvýšení ceny nebo změny jiných smluvních podmínek.</p>
+            <p class="mb-120">Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při aktualizaci ceny dodávky či Obchodních podmínek dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení regulované složky ceny, daní nebo poplatků) nebo změně jiných smluvních podmínek (s výjimkou změny vyvolané změnou právního předpisu) má zákazník právo kdykoliv do desátého dne přede dnem účinnosti zvýšení ceny nebo změny jiných smluvních podmínek tuto Smlouvu vypovědět, a to s účinností ke dni bezprostředně předcházejícímu dni účinnosti zvýšení ceny nebo změny jiných smluvních podmínek.</p>
+            <div class="text-underline"></div>
+            <p class="small">
+                <sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky. Skutečná doba je uvedena v bodu G.4.
+            </p>
+            <p class="small">
+                <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
+            </p>
         </div>
 		<div class="list__item">
 			<h2>H. Doplňkové služby</h2>
@@ -621,7 +628,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="list__item mb-120">
+		<div class="list__item">
 			<h2>I. Plná moc pro dodavatele</h2>
 			<h3>I.1 Ukončení smlouvy se stávajícím dodavatelem</h3>
 			<div class="checkbox-wrapper mb-20">
@@ -631,14 +638,7 @@
 			<h3>I.2 Plná moc</h3>
 			<p>Zákazník uděluje Dodavateli plnou moc uvedenou v příloze této Smlouvy. </p>
 		</div>
-        <div class="text-underline"></div>
-        <p class="small">
-            <sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky. Skutečná doba je uvedena v bodu G.4.
-        </p>
-        <p class="small">
-           <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
-        </p>
-		<div class="list__item page-break-before">
+		<div class="list__item">
 			<h2>J. Poučení o právu ukončit smlouvu zákazníkem - spotřebitelem</h2>
 			<h3>J.1 Odstoupení od smlouvy</h3>
 			<p class="mb-20">Zákazník, je-li spotřebitelem, má právo na odstoupení od této Smlouvy bez udání důvodu, a to do 14 dnů ode dne jejího uzavření. Zákazník výslovně žádá, aby Dodavatel zahájil dodávku plynu již během lhůty pro odstoupení od Smlouvy, pokud byl jako den zahájení dodávky sjednán den spadající do 14denní lhůty pro odstoupení. Odstoupí-li Zákazník po zahájení dodávky od této Smlouvy, uhradí Dodavateli cenu stanovenou smlouvou za plnění poskytované do doby odstoupení od Smlouvy.</p>
@@ -664,7 +664,7 @@
 			<table>
 				<tbody>
 					<tr>
-						<th>Přílohy a součást této Smlouvy tvoří</th>
+						<th>Přílohy a součást této Smlouvy tvoří:</th>
 						<td>Obchodní podmínky PXE pro dodávky plynu</td>
 					</tr>
 					<tr>
@@ -676,7 +676,7 @@
 		</div>
 	</div>
 
-	<div class="signatures-text">
+	<div class="signatures-text page-break-before">
 		<h2>Za Dodavatele</h2>
 		<p class="mb-5">V , dne </p>
 		<table class="mb-10">
@@ -810,8 +810,8 @@
 					Smlouva je tvořena (i) Nabídkou, (ii) údaji o Zákazníkovi a jeho odběrném místě zadanými Zákazníkem ve Webové aplikaci, (iii) ujednáními obsaženými ve vzorové smlouvě o sdružených službách dodávky umístěné ve Webové aplikaci, platné ke dni, kdy zákazník vyjádřil s  návrhem Smlouvy ve Webové aplikaci souhlas a (iv) obchodními podmínkami dodávky umístěnými ve Webové aplikaci, platnými ke dni, kdy zákazník vyjádřil s  návrhem Smlouvy ve Webové aplikaci souhlas.
 				</div>
 				<div class="lower-alpha__item lower-alpha__item--number">
-					<span class="lower-alpha__letter">3.14.</span>
-                    3.16.3.12.	V případě sporu o existenci smluvního vztahu mezi Dodavatelem a Zákazníkem, se považuje zaplacení první zálohové platby nebo platby za vyúčtování dodávky plynu (podle toho, která skutečnost nastane dříve) za souhlasný projev vůle Zákazníka s uzavřením Smlouvy.
+					<span class="lower-alpha__letter">3.12.</span>
+                    V případě sporu o existenci smluvního vztahu mezi Dodavatelem a Zákazníkem, se považuje zaplacení první zálohové platby nebo platby za vyúčtování dodávky plynu (podle toho, která skutečnost nastane dříve) za souhlasný projev vůle Zákazníka s uzavřením Smlouvy.
                 </div>
 			</div>
 		</div>
