--- a/pdf-export/patterns-of-contracts/contract-gas-po.html
+++ b/pdf-export/patterns-of-contracts/contract-gas-po.html
@@ -604,13 +604,13 @@
                 V Rozhodný den bude Zákazník e-mailem informován o ceně dodávky a Obchodních podmínkách PXE pro dodávky plynu pro smlouvy uzavřené na trhu PXE „parc4u“ platných
                 pro Nové období pro případ automatického prodloužení Smlouvy. Nebude-li Zákazník chtít, aby došlo k automatickému prodloužení Smlouvy za cenu dle oficiálního ceníku,
                 může mimo jiné přijmout také některou z nabídek aktuálně dostupných na trhu PXE „parc4u“, kde Zákazník provede i zrušení této Smlouvy. Pro vyloučení pochybností platí,
-                že uzavře-li Zákazník s Dodavatelem nejpozději 30 dní před uplynutím doby trvání této Smlouvy smlouvu o sdružených službách dodávky pro OM Zákazníka na dodávkové období
+                že uzavře-li Zákazník s Dodavatelem před uplynutím doby trvání této Smlouvy smlouvu o sdružených službách dodávky pro OM Zákazníka na dodávkové období
                 bezprostředně navazující na dodávkové období sjednané v této Smlouvě, tato Smlouva se na Nové období neprodlouží a Zákazník již nemusí oznamovat Dodavateli, že na jejím
                 ukončení trvá. Pokud právní předpisy dávají Zákazníkovi právo ukončit tuto Smlouvu před jejím automatickým prodloužením v pozdější době, než je uvedeno v této Smlouvě,
                 platí lhůta pro takové ukončení dle právních předpisů.
             </p>
             <h3>G.6 Změna smlouvy na dobu neurčitou a roční úprava ceny a obchodních podmínek</h3>
-            <p>
+            <p class="mb-20">
                 Smluvní strany se dohodly, že po uplynutí 36 měsíců od předpokládaného data zahájení
                 dodávky, nejdříve však 1.1.2025, se tato Smlouva stane smlouvou uzavřenou na dobu neurčitou.
                 Stanoví-li právní předpis dřívější okamžik, od kterého se Smlouva považuje za smlouvu na dobu
@@ -620,7 +620,7 @@
                 stane smlouvou uzavřenou na dobu neurčitou, bude i nadále každý rok prováděna aktualizace ceny
                 dodávky a Obchodních podmínek PXE pro dodávky plynu pro smlouvy uzavřené na trhu PXE „PARC4U“
                 (dále jen <b>„Obchodní podmínky“</b>). Aktualizace ceny dodávky a Obchodních podmínek se provede vždy
-                s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „Den výročí“).
+                s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „<b>Den výročí</b>“).
                 Zákazník bude 30. den přede Dnem výročí e-mailem vždy informován o nové ceně dodávky a novém
                 znění Obchodních podmínek. Novou cenou dodávky bude cena aktuální k 30. dni přede Dnem výročí,
                 Novým zněním obchodních podmínek budou Obchodní podmínky aktuální k 30. dni přede Dnem výročí. Pro
@@ -628,7 +628,7 @@
                 není povinen ode Dne výročí poskytovat Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí
                 jako součást dodávky komodity nenabízí.
             </p>
-            <h3>G.6 Zvýšení ceny a změna jiných smluvních podmínek</h3>
+            <h3>G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
             <p>
                 Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při aktualizaci ceny dodávky či
                 Obchodních podmínek dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení regulované
@@ -642,7 +642,7 @@
 		<div class="list__item">
 			<h2>H. Doplňkové služby</h2>
 			<h3>H.1 Zákazníkovi budou současně poskytovány tyto doplňkové služby či jiná doplňková plnění</h3>
-			<table>
+			<table class="mb-30">
 				<tbody>
 					<tr>
 						<th>Popis doplňkové služby/plnění</th>
@@ -654,8 +654,15 @@
 					</tr>
 				</tbody>
 			</table>
-		</div>
-		<div class="list__item mb-110">
+            <div class="text-underline"></div>
+            <p class="small">
+                <sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky. &nbsp;&nbsp;&nbsp;&nbsp;Skutečná doba je uvedena v bodu G.4.
+            </p>
+            <p class="small">
+                <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
+            </p>
+        </div>
+		<div class="list__item">
 			<h2>I. Plná moc pro dodavatele</h2>
 			<h3>I.1 Ukončení smlouvy se stávajícím dodavatelem</h3>
 			<div class="checkbox-wrapper mb-20">
@@ -665,16 +672,6 @@
 			<h3>I.2 Plná moc</h3>
 			<p>Zákazník uděluje Dodavateli plnou moc uvedenou v příloze této smlouvy. </p>
 		</div>
-        <div class="text-underline"></div>
-        <p class="small">
-            <sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky. &nbsp;&nbsp;&nbsp;&nbsp;Skutečná doba je uvedena v bodu G.4.
-        </p>
-        <p class="small">
-           <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
-        </p>
-        <p class="small">
-            <sup>3</sup>&nbsp;&nbsp;§11a odst. 5 zákona č. 458/2000 Sb., energetický zákon
-        </p>
         <div class="list__item">
 			<h2>J. Závěrečná ustanovení</h2>
 			<p>Tato Smlouva se uzavírá v souladu s ustanovením § 72 odst. 2 zák. č. 458/2000 Sb., energetický zákon a § 1746
@@ -691,7 +688,7 @@
 			<table>
 				<tbody>
 					<tr>
-						<th>Přílohy a součást této Smlouvy tvoří</th>
+						<th>Přílohy a součást této Smlouvy tvoří:</th>
 						<td>Obchodní podmínky PXE pro dodávky plynu</td>
 					</tr>
 					<tr>
