--- a/pdf-export/patterns-of-contracts/contract-power-fo.html
+++ b/pdf-export/patterns-of-contracts/contract-power-fo.html
@@ -232,6 +232,10 @@
 			margin-bottom: 15px;
 		}
 
+        .mb-25 {
+            margin-bottom: 25px
+        }
+
 		.mb-20 {
 			margin-bottom: 20px;
 		}
@@ -248,7 +252,11 @@
 			margin-bottom: 40px;
 		}
 
-		.pt-40 {
+        .mb-90 {
+            margin-bottom: 90px;
+        }
+
+        .pt-40 {
 			padding-top: 40px;
 		}
 
@@ -618,11 +626,18 @@
                 Pokud Zákazník nejpozději 9. den před uplynutím doby trvání této Smlouvy nebo prodloužené doby trvání této Smlouvy neoznámí písemně či prostřednictvím webové aplikace parc4u druhé smluvní straně, že trvá na jejím ukončení, prodlužuje se trvání této Smlouvy na dobu dalších 12 měsíců (dále též „<b>Nové období</b>“) s tím, že (i) pro Nové období platí Obchodní podmínky PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „parc4u“ aktuální 30. den před zahájením Nového období<sup>2</sup>  (dále jen „<b>Rozhodný den</b>“) a (ii) cena dodávky pro Nové období se sjednává ve výši uvedené v oficiálním ceníku Dodavatele, platném k Rozhodnému dni, a to takové, která je relevantní pro Nové období a dané parametry OM Zákazníka. Dodavatel není v Novém období povinen poskytovat Zákazníkovi Doplňkové služby, pokud je již k Rozhodnému dni jako součást dodávky komodity nenabízí. Oficiálním ceníkem Dodavatele dle této Smlouvy se rozumí cena dle odpovídající nabídky Dodavatele publikované ve webové aplikaci parc4u k začátku Rozhodného dne. Nebude-li k začátku Rozhodného dne ve webové aplikaci parc4u taková nabídka (toto se může stát např. v případě nepředvídaných technických problémů na straně Dodavatele), rozumí se oficiálním ceníkem dle této Smlouvy ceníková nabídka uvedená na webových stránkách Dodavatele, platná v Rozhodný den. V Rozhodný den bude Zákazník e-mailem informován o ceně dodávky a Obchodních podmínkách PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „parc4u“ platných pro Nové období pro případ automatického prodloužení Smlouvy. Nebude-li Zákazník chtít, aby došlo k automatickému prodloužení Smlouvy za cenu dle oficiálního ceníku, může mimo jiné přijmout také některou z nabídek aktuálně dostupných na trhu PXE „parc4u“, kde Zákazník provede i zrušení této Smlouvy. Pro vyloučení pochybností platí, že uzavře-li Zákazník s Dodavatelem před uplynutím doby trvání této Smlouvy smlouvu o sdružených službách dodávky pro OM Zákazníka na dodávkové období bezprostředně navazující na dodávkové období sjednané v této Smlouvě, tato Smlouva se na Nové období neprodlouží a Zákazník již nemusí oznamovat Dodavateli, že na jejím ukončení trvá. Pokud právní předpisy dávají Zákazníkovi právo ukončit tuto Smlouvu před jejím automatickým prodloužením v pozdější době, než je uvedeno v této Smlouvě, platí lhůta pro takové ukončení dle právních předpisů.
             </p>
             <h3>G.6 Změna smlouvy na dobu neurčitou a roční úprava ceny a obchodních podmínek</h3>
-            <p>
+            <p class="mb-90">
                 Smluvní strany se dohodly, že po uplynutí 36 měsíců od předpokládaného data zahájení dodávky, nejdříve však 1.1.2025, se tato Smlouva stane smlouvou uzavřenou na dobu neurčitou. Stanoví-li právní předpis dřívější okamžik, od kterého se Smlouva považuje za smlouvu na dobu neurčitou, má přednost ustanovení právního předpisu. Smlouvu uzavřenou na dobu neurčitou je každá ze smluvních stran oprávněna bez uvedení důvodu vypovědět. Délka výpovědní doby činí 3 měsíce a začíná běžet prvním dnem kalendářního měsíce následujícího po doručení výpovědi. Poté, co se Smlouva stane smlouvou uzavřenou na dobu neurčitou, bude i nadále každý rok prováděna aktualizace ceny dodávky a Obchodních podmínek PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „PARC4U“ (dále jen „<b>Obchodní podmínky</b>“). Aktualizace ceny dodávky a Obchodních podmínek se provede vždy s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „<b>Den výročí</b>“). Zákazník bude 30. den přede Dnem výročí e-mailem vždy informován o nové ceně dodávky a novém znění Obchodních podmínek. Novou cenou dodávky bude cena aktuální k 30. dni přede Dnem výročí, Novým zněním obchodních podmínek budou Obchodní podmínky aktuální k 30. dni přede Dnem výročí. Pro určení výše nové ceny dodávky jinak platí shodná pravidla, jaká jsou uvedena v bodě G.5. Dodavatel není povinen ode Dne výročí poskytovat Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí  jako součást dodávky komodity nenabízí.
             </p>
-            <h3>G.6 Změna smlouvy na dobu neurčitou a roční úprava ceny a obchodních podmínek</h3>
-            <p>
+            <div class="text-underline"></div>
+            <p class="small">
+                <span><sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky.Skutečná doba je uvedena v bodu G.4.</span>
+            </p>
+            <p class="small">
+                <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
+            </p>
+            <h3 class="page-break-before">G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
+            <p class="mb-15">
                 Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při aktualizaci ceny dodávky či Obchodních podmínek dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení regulované složky ceny, daní nebo poplatků) nebo změně jiných smluvních podmínek (s výjimkou změny vyvolané změnou právního předpisu), má zákazník právo kdykoliv do desátého dne přede dnem účinnosti zvýšení ceny nebo změny jiných smluvních podmínek tuto Smlouvu vypovědět, a to s účinností ke dni bezprostředně předcházejícímu dni účinnosti zvýšení ceny nebo změny jiných smluvních podmínek.
             </p>
         </div>
@@ -655,13 +670,6 @@
 				</span>
             </div>
 
-            <div class="text-underline"></div>
-            <p class="small">
-                <span><sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky.Skutečná doba je uvedena v bodu G.4.</span>
-            </p>
-            <p class="small">
-               <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
-            </p>
             <h3>I.2 Plná moc</h3>
 			<p>Zákazník uděluje Dodavateli plnou moc uvedenou v příloze této Smlouvy. </p>
 		</div>
@@ -690,7 +698,7 @@
 			<table>
 				<tbody>
 					<tr>
-						<th>Přílohy a součást této Smlouvy tvoří</th>
+						<th>Přílohy a součást této Smlouvy tvoří:</th>
 						<td>Obchodní podmínky PXE pro dodávky elektřiny</td>
 					</tr>
 					<tr>
@@ -702,7 +710,7 @@
 		</div>
 	</div>
 
-	<div class="signatures-text">
+	<div class="signatures-text page-break-before">
 		<h2>Za Dodavatele</h2>
 		<p class="mb-5">V , dne </p>
 		<table class="mb-10">
@@ -830,7 +838,8 @@
                 </div>
 				<div class="lower-alpha__item lower-alpha__item--number">
 					<span class="lower-alpha__letter">3.10.</span>
-                    3.10.	Smlouva je uzavřena splněním poslední z těchto podmínek: (i) Zákazník vyjádřil s návrhem Smlouvy souhlas ve Webové aplikaci, (ii) bylo provedeno řádné ověření identity Zákazníka (pouze v případě, jde-li o první Smlouvu uzavřenou Zákazníkem ve Webové aplikaci) a (iii) Dodavatel a Zákazník obdrželi notifikaci o splnění obou podmínek dle bodů (i) a (ii).				</div>
+                    Smlouva je uzavřena splněním poslední z těchto podmínek: (i) Zákazník vyjádřil s návrhem Smlouvy souhlas ve Webové aplikaci, (ii) bylo provedeno řádné ověření identity Zákazníka (pouze v případě, jde-li o první Smlouvu uzavřenou Zákazníkem ve Webové aplikaci) a (iii) Dodavatel a Zákazník obdrželi notifikaci o splnění obou podmínek dle bodů (i) a (ii).
+                </div>
 				<div class="lower-alpha__item lower-alpha__item--number">
 					<span class="lower-alpha__letter">3.11.</span>
 					Smlouva je tvořena (i) Nabídkou, (ii) údaji o Zákazníkovi a jeho odběrném místě zadanými Zákazníkem ve Webové aplikaci, (iii) ujednáními obsaženými ve vzorové smlouvě o sdružených službách dodávky umístěné ve Webové aplikaci, platné ke dni, kdy zákazník vyjádřil s návrhem Smlouvy ve Webové aplikaci souhlas a (iv) obchodními podmínkami dodávky umístěnými ve Webové aplikaci, platnými ke dni, kdy zákazník vyjádřil s návrhem Smlouvy ve Webové aplikaci souhlas.
