--- a/pdf-export/patterns-of-contracts/contract-power-po.html
+++ b/pdf-export/patterns-of-contracts/contract-power-po.html
@@ -244,7 +244,11 @@
 			margin-bottom: 70px;
 		}
 
-		.pt-40 {
+        .mb-80 {
+            margin-bottom: 80px;
+        }
+
+        .pt-40 {
 			padding-top: 40px;
 		}
 
@@ -620,15 +624,22 @@
             <p class="mb-15">
                 Pokud Zákazník nejpozději 9. den před uplynutím doby trvání této Smlouvy nebo prodloužené doby trvání této Smlouvy neoznámí písemně či prostřednictvím webové aplikace parc4u druhé smluvní straně, že trvá na jejím ukončení, prodlužuje se trvání této Smlouvy na dobu dalších 12 měsíců (dále též „<b>Nové období</b>“) s tím, že (i) pro Nové období platí Obchodní podmínky PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „PARC4U“ aktuální 30. den před zahájením Nového období  (dále jen „<b>Rozhodný den</b>“) a (ii) cena dodávky pro Nové období se sjednává ve výši uvedené v oficiálním ceníku Dodavatele, platném k Rozhodnému dni, a to takové, která je relevantní pro Nové období a dané parametry OM Zákazníka. Dodavatel není v Novém období povinen poskytovat Zákazníkovi Doplňkové služby, pokud je již k Rozhodnému dni jako součást dodávky komodity nenabízí. Oficiálním ceníkem Dodavatele dle této Smlouvy se rozumí cena dle odpovídající nabídky Dodavatele publikované ve webové aplikaci parc4u k začátku Rozhodného dne. Nebude-li k začátku Rozhodného dne ve webové aplikaci parc4u taková nabídka (toto se může stát např. v případě nepředvídaných technických problémů na straně Dodavatele), rozumí se oficiálním ceníkem dle této Smlouvy ceníková nabídka uvedená na webových stránkách Dodavatele, platná v Rozhodný den. V Rozhodný den bude Zákazník e-mailem informován o ceně dodávky a Obchodních podmínkách PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „PARC4U“ platných pro Nové období pro případ automatického prodloužení Smlouvy. Nebude-li Zákazník chtít, aby došlo k automatickému prodloužení Smlouvy za cenu dle oficiálního ceníku, může mimo jiné přijmout také některou z nabídek aktuálně dostupných na trhu PXE „PARC4U“, kde Zákazník provede i zrušení této Smlouvy. Pro vyloučení pochybností platí, že uzavře-li Zákazník s Dodavatelem před uplynutím doby trvání této Smlouvy smlouvu o sdružených službách dodávky pro OM Zákazníka na dodávkové období bezprostředně navazující na dodávkové období sjednané v této Smlouvě, tato Smlouva se na Nové období neprodlouží a Zákazník již nemusí oznamovat Dodavateli, že na jejím ukončení trvá.  Pokud právní předpisy dávají Zákazníkovi právo ukončit tuto Smlouvu před jejím automatickým prodloužením v pozdější době, než je uvedeno v této Smlouvě, platí lhůta pro takové ukončení dle právních předpisů.             </p>
             <h3>G.6 Změna smlouvy na dobu neurčitou a roční úprava ceny a obchodních podmínek</h3>
-            <p>
+            <p class="mb-80">
                 Smluvní strany se dohodly, že po uplynutí 36 měsíců od předpokládaného data zahájení dodávky, nejdříve však 1.1.2025, se tato Smlouva stane smlouvou uzavřenou na dobu neurčitou. Stanoví-li právní předpis dřívější okamžik, od kterého se Smlouva považuje za smlouvu na dobu neurčitou, má přednost ustanovení právního předpisu. Smlouvu uzavřenou na dobu neurčitou je každá ze smluvních stran oprávněna bez uvedení důvodu vypovědět. Délka výpovědní doby činí 3 měsíce a začíná běžet prvním dnem kalendářního měsíce následujícího po doručení výpovědi. Poté, co se Smlouva stane smlouvou uzavřenou na dobu neurčitou, bude i nadále každý rok prováděna aktualizace ceny dodávky a Obchodních podmínek PXE pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE „PARC4U“ (dále jen „<b>Obchodní podmínky</b>“). Aktualizace ceny dodávky a Obchodních podmínek se provede vždy s účinností od ročního výročí dne zahájení Nového období (viz bod G.5) (dále jen „<b>Den výročí</b>“). Zákazník bude 30. den přede Dnem výročí e-mailem vždy informován o nové ceně dodávky a novém znění Obchodních podmínek. Novou cenou dodávky bude cena aktuální k 30. dni přede Dnem výročí, Novým zněním obchodních podmínek budou Obchodní podmínky aktuální k 30. dni přede Dnem výročí. Pro určení výše nové ceny dodávky jinak platí shodná pravidla, jaká jsou uvedena v bodě G.5. Dodavatel není povinen ode Dne výročí poskytovat Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí  jako součást dodávky komodity nenabízí.
+            </p>
+            <div class="text-underline"></div>
+            <p class="small">
+                <span><sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky.Skutečná doba je uvedena v bodu G.4.</span>
+            </p>
+            <p class="small">
+                <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
             </p>
             <h3>G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
             <p>
                 Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při aktualizaci ceny dodávky či Obchodních podmínek dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení regulované složky ceny, daní nebo poplatků) nebo změně jiných smluvních podmínek (s výjimkou změny vyvolané změnou právního předpisu), má zákazník právo kdykoliv do desátého dne přede dnem účinnosti zvýšení ceny nebo změny jiných smluvních podmínek tuto Smlouvu vypovědět, a to s účinností ke dni bezprostředně předcházejícímu dni účinnosti zvýšení ceny nebo změny jiných smluvních podmínek.
             </p>
         </div>
-        <div class="list__item mb-70">
+        <div class="list__item">
 			<h2>H. Doplňkové služby</h2>
 
 			<h3>H.1 Zákazníkovi budou současně poskytovány tyto doplňkové služby či jiná doplňková plnění</h3>
@@ -645,17 +656,7 @@
 				</tbody>
 			</table>
 		</div>
-        <div class="text-underline"></div>
-        <p class="small">
-            <span><sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se může lišit zejména v případě, že se předpokládané datum zahájení dodávky neshoduje se skutečným datem zahájení dodávky.Skutečná doba je uvedena v bodu G.4.</span>
-        </p>
-        <p class="small">
-           <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost informovat Zákazníka o změnách alespoň 30 dní dopředu.
-        </p>
-        <div class="small">
-            <span><sup>3</sup>&nbsp;&nbsp;§11a odst. 5 zákona č. 458/2000 Sb., energetický zákon</span>
-        </div>
-        <div class="list__item page-break-before">
+        <div class="list__item">
 			<h2>I. Plná moc pro dodavatele</h2>
 
 			<h3>I.1 Ukončení smlouvy se stávajícím dodavatelem</h3>
@@ -685,7 +686,7 @@
 			<table>
 				<tbody>
 					<tr>
-						<th>Přílohy a součást této Smlouvy tvoří</th>
+						<th>Přílohy a součást této Smlouvy tvoří:</th>
 						<td>Obchodní podmínky PXE pro dodávky elektřiny</td>
 					</tr>
 					<tr>
@@ -1061,8 +1062,7 @@
 				</div>
 				<div class="lower-alpha__item lower-alpha__item--number">
 					<span class="lower-alpha__letter">8.6.</span>
-					Změna odběratele v OM Zákazníka bez přerušení dodávky a bez změny dodavatele je podmíněna řádným ukončením předchozího smluvního vztahu a vyrovnáním veškerých závazků Zákazníka vůči Dodavateli.
-				</div>
+                    Zaniklo-li Zákazníkovi odebírajícímu elektřinu z hladiny nízkého napětí vlastnické nebo užívací právo k OM, je oprávněn bez postihu vypovědět závazek ze Smlouvy. Výpovědní doba činí 15 dnů a počíná běžet prvním dnem měsíce následujícího po doručení oznámení výpovědi závazku ze Smlouvy Dodavateli.				</div>
 				<div class="lower-alpha__item lower-alpha__item--number">
 					<span class="lower-alpha__letter">8.7.</span>
 					Dochází-li k ukončení Smlouvy, může Zákazník ke dni zániku Smlouvy provést kontrolní odečet Elektroměru („Samoodečet“) a doručit jej Dodavateli. Pokud však nebudou splněny zákonné podmínky pro Samoodečet, nebude k němu Dodavatel přihlížet.
