--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+            gtag('consent', 'default', {
+                ad_storage: 'denied',
+                analytics_storage: 'denied',
+                wait_for_update: 2000
+            });
         </script>
         <meta name="google-site-verification" content="S2HgqkW4rJgsZuVJbrgrAmdwYnguu7zKvCejgAsvyNs">
         <meta name="facebook-domain-verification" content="vngn44jpdm6rc7czf0f9regvnltvt3">
