--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,9 @@
             gtag('consent', 'default', {
                 ad_storage: 'denied',
                 analytics_storage: 'denied',
-                wait_for_update: 2000
+                wait_for_update: 2000,
             });
+            gtag('js', new Date());
         </script>
         <meta name="google-site-verification" content="S2HgqkW4rJgsZuVJbrgrAmdwYnguu7zKvCejgAsvyNs">
         <meta name="facebook-domain-verification" content="vngn44jpdm6rc7czf0f9regvnltvt3">
