--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
             name="facebook-domain-verification"
             content="vngn44jpdm6rc7czf0f9regvnltvt3"
         />
+        <meta name="build-id" content="123456" />
     </head>
     <body>
         <lnd-root>Loading&hellip;</lnd-root>
