--- a/src/assets/pdfjs/web/viewer.html
+++ b/src/assets/pdfjs/web/viewer.html
@@ -31,7 +31,7 @@ See https://github.com/adobe-type-tools/cmap-resources
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>PDF.js viewer</title>
 
-        <link rel="stylesheet" href="viewer.css" />
+        <link rel="stylesheet" href="/../../../viewer.css" />
 
         <!-- This snippet is used in production (included from viewer.html) -->
         <link
