feature/PXEPR-1510-prerender
fix/optimalization

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>parc4u</title>
         <base href="/" />
         <script
-            name="script-id"
+            id="app-config"
             type="text/javascript"
             src="assets/configurations/config.js"
         ></script>
