--- a/pdf-export/patterns-of-contracts/contract-power-po.html
+++ b/pdf-export/patterns-of-contracts/contract-power-po.html
@@ -621,7 +621,7 @@
                     však nabývají účinnosti již dnem uzavření této Smlouvy.
                     Smlouva zaniká, pokud se ani do 9 měsíců od předpokládaného
                     data zahájení dodávky nepodaří zahájit dodávku do OM
-                    Zákazníka podle této Smlouvy (podrobnosti viz bod 8.2 OP).
+                    Zákazníka podle této Smlouvy (podrobnosti viz bod 9.2 OP).
                 </p>
                 <h3 class="page-break-before">G.2 Zahájení dodávky</h3>
                 <div class="mb-20">
@@ -666,7 +666,10 @@
                     <table>
                         <tbody>
                             <tr>
-                                <th>Dodávka se sjednává na dobu určitou:</th>
+                                <th>
+                                    Dodávka (tato Smlouva) se sjednává na dobu
+                                    určitou:
+                                </th>
                                 <td>
                                     <div class="checkbox-wrapper">
                                         <span class="checkbox"></span>
@@ -686,6 +689,14 @@
                                         >
                                     </div>
                                 </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>Dodávka (tato Smlouva) skončí dne:</th>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
@@ -763,31 +774,26 @@
                     uvedení důvodu vypovědět. Délka výpovědní doby činí 3 měsíce
                     a začíná běžet prvním dnem kalendářního měsíce následujícího
                     po doručení výpovědi. Poté, co se Smlouva stane smlouvou
-                    uzavřenou na dobu neurčitou, bude i nadále každý rok
-                    prováděna aktualizace ceny dodávky a Obchodních podmínek PXE
-                    pro dodávky elektřiny pro smlouvy uzavřené na trhu PXE
-                    „PARC4U“ (dále jen „<b>Obchodní podmínky</b>“). Aktualizace
-                    ceny dodávky a Obchodních podmínek se provede vždy s
-                    účinností od ročního výročí dne zahájení Nového období (viz
-                    bod G.5) (dále jen „<b>Den výročí</b>“). Zákazník bude 30.
-                    den přede Dnem výročí e-mailem vždy informován o nové ceně
-                    dodávky a novém znění Obchodních podmínek. Novou cenou
-                    dodávky bude cena aktuální k 30. dni přede Dnem výročí,
-                    Novým zněním obchodních podmínek budou Obchodní podmínky
-                    aktuální k 30. dni přede Dnem výročí. Pro určení výše nové
-                    ceny dodávky jinak platí shodná pravidla, jaká jsou uvedena
-                    v bodě G.5. Dodavatel není povinen ode Dne výročí poskytovat
-                    Zákazníkovi Doplňkové služby, pokud je již ke Dni výročí
-                    jako součást dodávky komodity nenabízí.
+                    uzavřenou na dobu neurčitou, bude Dodavatel oprávněn
+                    jednostranně měnit cenu silové elektřiny a výši stálého
+                    měsíčního platu a OP, a to v návaznosti na změny právních
+                    předpisů, v zájmu zlepšení kvality poskytovaných služeb a s
+                    ohledem na obchodní cíle Dodavatele. Tyto změny jsou účinné
+                    ode dne stanoveného Dodavatelem. Dodavatel informuje o změně
+                    Zákazníka nejméně 30 dní před navrhovaným dnem účinnosti
+                    změny. O navrhované změně informuje Dodavatel Zákazníka
+                    písemně (např. dopisem nebo prostřednictvím e-mailu).
+                    Dodavatel není povinen poté, co se doba trvání Smlouvy změní
+                    na dobu neurčitou, poskytovat Zákazníkovi Doplňkové služby.
                 </p>
                 <div class="text-underline"></div>
                 <p class="small">
                     <span
-                        ><sup>1</sup>&nbsp;&nbsp;Skutečná doba trvání smlouvy se
-                        může lišit zejména v případě, že se předpokládané datum
-                        zahájení dodávky neshoduje se skutečným datem zahájení
-                        dodávky.Skutečná doba je uvedena v bodu G.4.</span
-                    >
+                        ><sup>1</sup>&nbsp;Skutečná doba trvání dodávky se může
+                        lišit v případě, že se předpokládané datum zahájení
+                        dodávky neshoduje se skutečným datem zahájení dodávky.
+                        Pravidla počítání doby trvání dodávky jsou uvedena v OP.
+                    </span>
                 </p>
                 <p class="small">
                     <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost
@@ -795,16 +801,15 @@
                 </p>
                 <h3>G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
                 <p>
-                    Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo při
-                    aktualizaci ceny dodávky či Obchodních podmínek dle bodu G.6
-                    ke zvýšení ceny (s výjimkou zvýšení regulované složky ceny,
-                    daní nebo poplatků) nebo změně jiných smluvních podmínek (s
-                    výjimkou změny vyvolané změnou právního předpisu), má
-                    zákazník právo kdykoliv do desátého dne přede dnem účinnosti
-                    zvýšení ceny nebo změny jiných smluvních podmínek tuto
-                    Smlouvu vypovědět, a to s účinností ke dni bezprostředně
-                    předcházejícímu dni účinnosti zvýšení ceny nebo změny jiných
-                    smluvních podmínek.
+                    Dochází-li při prodloužení Smlouvy dle bodu G.5 nebo
+                    způsobem dle bodu G.6 ke zvýšení ceny (s výjimkou zvýšení
+                    regulované složky ceny, daní nebo poplatků) nebo změně
+                    jiných smluvních podmínek (s výjimkou změny vyvolané změnou
+                    právního předpisu), má zákazník právo kdykoliv do desátého
+                    dne přede dnem účinnosti zvýšení ceny nebo změny jiných
+                    smluvních podmínek tuto Smlouvu vypovědět, a to s účinností
+                    ke dni bezprostředně předcházejícímu dni účinnosti zvýšení
+                    ceny nebo změny jiných smluvních podmínek.
                 </p>
             </div>
             <div class="list__item">
@@ -1248,7 +1253,7 @@
                     </div>
                 </div>
             </div>
-            <div class="list__item page-break-before">
+            <div class="list__item">
                 <h2>VI. Cena a platební podmínky</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
@@ -1383,31 +1388,49 @@
                 </div>
             </div>
             <div class="list__item">
-                <h2>VII. Zákaznická podpora</h2>
+                <h2>VII. Doba trvání dodávky</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
                         <span class="lower-alpha__letter">7.1.</span>
+                        Doba trvání dodávky je uvedena ve Smlouvě. Dodávku lze
+                        sjednat pouze na dobu určitou, a to buď 12 nebo 24
+                        měsíců, přičemž platí, že tato doba počíná běžet dnem
+                        zahájení dodávky do OM Zákazníka a končí dnem, kdy
+                        uplyne daný počet měsíců od předpokládaného (nikoli
+                        skutečného) data zahájení dodávky. Současně, pokud den,
+                        kdy uplyne tato doba, není posledním dnem kalendářního
+                        měsíce, prodlužuje se dodávka až do bezprostředně
+                        následujícího posledního dne kalendářního měsíce. Datum
+                        konce dodávky je vždy uvedeno ve Smlouvě.
+                    </div>
+                </div>
+            </div>
+            <div class="list__item">
+                <h2>VIII. Zákaznická podpora</h2>
+                <div>
+                    <div class="lower-alpha__item lower-alpha__item--number">
+                        <span class="lower-alpha__letter">8.1.</span>
                         Dodavatel se zavazuje zajistit pro Zákazníka zákaznickou
                         podporu. Zákaznická podpora slouží pro řešení problémů
                         týkajících se dodávky Elektřiny, včetně otázek
                         vyúčtování ceny.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">7.2.</span>
+                        <span class="lower-alpha__letter">8.2.</span>
                         Dodavatel je povinen sdělit Zákazníkovi kontaktní údaje
                         pro zajištění služeb zákaznické podpory.
                     </div>
                 </div>
             </div>
             <div class="list__item">
-                <h2>VIII. Zánik smlouvy</h2>
+                <h2>IX. Zánik smlouvy</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.1.</span>
+                        <span class="lower-alpha__letter">9.1.</span>
                         Smluvní strany mohou Smlouvu ukončit písemnou dohodou.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.2.</span>
+                        <span class="lower-alpha__letter">9.2.</span>
                         Smlouva zaniká, pokud se ani do 9 měsíců od
                         předpokládaného data zahájení dodávky nepodaří zahájit
                         dodávku do OM Zákazníka podle Smlouvy. Smlouva zanikne
@@ -1418,7 +1441,7 @@
                         Smlouvy.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.3.</span>
+                        <span class="lower-alpha__letter">9.3.</span>
                         Zákazník je oprávněn vypovědět Smlouvu bez výpovědní
                         doby v případě, že:
                         <div class="lower-alpha__item">
@@ -1436,7 +1459,7 @@
                                 zákona Dodavatel oprávněn přerušit nebo omezit
                                 dodávku elektřiny, nebo
                             </div>
-                            <div class="lower-alpha__item page-break-before">
+                            <div class="lower-alpha__item">
                                 <span class="lower-alpha__letter">(ii)</span>
                                 bude v prodlení se zaplacením splatného závazku,
                                 který neuhradí ani po písemném upozornění
@@ -1462,8 +1485,13 @@
                             Dodavatele dodávat elektřinu.
                         </div>
                     </div>
-                    <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.4.</span>
+                    <div
+                        class="
+                            lower-alpha__item lower-alpha__item--number
+                            page-break-before
+                        "
+                    >
+                        <span class="lower-alpha__letter">9.4.</span>
                         Dodavatel je oprávněn vypovědět Smlouvu bez výpovědní
                         doby, pokud:
                         <div class="lower-alpha__item">
@@ -1518,7 +1546,7 @@
                         straně.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.6.</span>
+                        <span class="lower-alpha__letter">9.6.</span>
                         Zaniklo-li Zákazníkovi odebírajícímu elektřinu z hladiny
                         nízkého napětí vlastnické nebo užívací právo k OM, je
                         oprávněn bez postihu vypovědět závazek ze Smlouvy.
@@ -1527,7 +1555,7 @@
                         závazku ze Smlouvy Dodavateli.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.7.</span>
+                        <span class="lower-alpha__letter">9.7.</span>
                         Dochází-li k ukončení Smlouvy, může Zákazník ke dni
                         zániku Smlouvy provést kontrolní odečet Elektroměru
                         („Samoodečet“) a doručit jej Dodavateli. Pokud však
@@ -1535,7 +1563,7 @@
                         k němu Dodavatel přihlížet.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.8.</span>
+                        <span class="lower-alpha__letter">9.8.</span>
                         Hodlá-li Zákazník ukončit odběr elektřiny v OM
                         Zákazníka, je povinen provést předem odhlášení odběru a
                         dohodnout termín odpojení Elektroměru. Neumožní-li
@@ -1544,7 +1572,7 @@
                         doby, než umožní tyto úkony provést.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.9.</span>
+                        <span class="lower-alpha__letter">9.9.</span>
                         Zákazník, který je spotřebitelem, je oprávněn Smlouvu
                         bez uvedení důvodu ukončit za podmínek uvedených v § 11a
                         zákona č. 458/2000 Sb. (viz též poučení v textu
@@ -1556,10 +1584,10 @@
                 </div>
             </div>
             <div class="list__item">
-                <h2>IX. Ochrana osobních údajů</h2>
+                <h2>X. Ochrana osobních údajů</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">9.1.</span>
+                        <span class="lower-alpha__letter">10.1.</span>
                         Z důvodu plnění smluvních povinností, povinností
                         uložených právními předpisy a z&nbsp;důvodu ochrany
                         oprávněných zájmů Dodavatele, zpracovává Dodavatel
@@ -1571,18 +1599,18 @@
                         uplatňování práv ze Smlouvy.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">9.2.</span>
+                        <span class="lower-alpha__letter">10.2.</span>
                         Proti zpracování osobních údajů na základě oprávněných
                         zájmů Dodavatele je Zákazník oprávněn kdykoliv podat
                         námitku.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">9.3.</span>
+                        <span class="lower-alpha__letter">10.3.</span>
                         Více informací o zpracování osobních údajů Dodavatelem
                         je uvedeno na webových stránkách Dodavatele.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">9.4.</span>
+                        <span class="lower-alpha__letter">10.4.</span>
                         Z důvodu zvýšení kvality služeb Dodavatele může být
                         telefonická komunikace mezi Dodavatelem a Zákazníkem ze
                         strany Dodavatele monitorována.
@@ -1590,22 +1618,42 @@
                 </div>
             </div>
             <div class="list__item">
-                <h2>X. Řešení sporů</h2>
+                <h2>XI. Změna obchodních podmínek ze strany PXE</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">10.1.</span>
+                        <span class="lower-alpha__letter">11.1.</span>
+                        Smluvní strany souhlasí, že PXE je v průběhu dodávky, až
+                        do doby změny Smlouvy na dobu neurčitou, oprávněna tyto
+                        OP měnit, a to pouze za účelem přizpůsobení znění OP
+                        změně právních předpisů. Tyto změny OP jsou účinné ode
+                        dne stanoveného PXE.
+                    </div>
+                    <div class="lower-alpha__item lower-alpha__item--number">
+                        <span class="lower-alpha__letter">11.2.</span>
+                        PXE informuje o změně OP Zákazníka i Dodavatele, a to
+                        nejméně 30 dní před navrhovaným dnem účinnosti změny OP.
+                        O navrhované změně OP informuje PXE prostřednictvím
+                        e-mailu.
+                    </div>
+                </div>
+            </div>
+            <div class="list__item">
+                <h2>XII. Řešení sporů</h2>
+                <div>
+                    <div class="lower-alpha__item lower-alpha__item--number">
+                        <span class="lower-alpha__letter">12.1.</span>
                         K rozhodování soudních sporů jsou příslušné soudy České
                         republiky.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">10.2.</span>
+                        <span class="lower-alpha__letter">12.2.</span>
                         V případě soudního řízení, jehož účastníkem je Zákazník,
                         který není spotřebitelem, je místně příslušný soud dle
                         sídla Dodavatele a rozhodným právem je právo České
                         republiky.
                     </div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">10.3.</span>
+                        <span class="lower-alpha__letter">12.3.</span>
                         Spory mezi Dodavatelem a Zákazníkem v postavení
                         spotřebitele vyplývající ze Smlouvy lze řešit mimosoudně
                         u Energetického regulačního úřadu, se sídlem Masarykovo
