feature/PXEPR-2.9.0-fixes

--- a/src/static/pages/supply-points-detail/page.html
+++ b/src/static/pages/supply-points-detail/page.html
@@ -165,7 +165,7 @@
                             type="secondary">
                         </lnd-button>
                         <p class="input-subtext">
-                            Energetický zákon (§ 11 a odst. 3) vám nabízí možnost smlouvu vypovědět bez jakýchkoliv sankcí
+                            Energetický zákon (§ 11 b odst. 1) vám nabízí možnost smlouvu vypovědět bez jakýchkoliv sankcí
                             do 15. dne po záhajení dodávek energií. Výpovědní doba činí 15 dnů a začíná běžet prvním dnem měsíce
                             následujícího. Jediná částka, kterou zaplatíte, je za energii, kterou jste už stihli odebrat.
                         </p>
