--- a/pdf-export/patterns-of-contracts/contract-gas-fo.html
+++ b/pdf-export/patterns-of-contracts/contract-gas-fo.html
@@ -772,7 +772,7 @@
                     <sup>1</sup>&nbsp;Skutečná doba trvání dodávky se může lišit
                     v případě, že se předpokládané datum zahájení dodávky
                     neshoduje se skutečným datem zahájení dodávky. Pravidla
-                    počítání doby trvání dodávky jsou uvedena v OP
+                    počítání doby trvání dodávky jsou uvedena v OP.
                 </p>
                 <p class="small">
                     <sup>2</sup>&nbsp;&nbsp;Dodavatel má zákonnou povinnost
