PXEPR-1609-improvement public pages edit

--- a/src/static/pages/registration/page.html
+++ b/src/static/pages/registration/page.html
@@ -6,7 +6,7 @@
     <pxe-supplier [configSupplier]="configSupplier"></pxe-supplier>
 </ng-template>
 
-<div class="section section--bg-two-half section--gradient-violet-right-half">
+<div class="section">
     <div class="container-fluid container-fluid--max-width">
         <div class="row">
             <div class="col-xl-6">
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-xl-6">
-                <div class="section__half section__half--gradient-violet">
+                <div class="section__half section__half--fix-height section__half--gradient-violet">
                     <div class="row">
                         <div class="col-md-8 offset-md-2">
                             <h2 class="h3--public text-white">Nechcete nic vyplňovat? Nemusíte!</h2>
