--- a/pdf-export/patterns-of-contracts/contract-gas-fo.html
+++ b/pdf-export/patterns-of-contracts/contract-gas-fo.html
@@ -17,28 +17,28 @@
                 }
 
                 @top-right {
-                    content: 'Smlouva o sdružených službách dodávky plynu';
+                    content: "Smlouva o sdružených službách dodávky plynu";
                     padding-top: 18px;
                     vertical-align: top;
                     font-size: 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: "Roboto", sans-serif;
                 }
 
                 @bottom-left {
-                    content: '© POWER EXCHANGE CENTRAL EUROPE, a.s.';
+                    content: "© POWER EXCHANGE CENTRAL EUROPE, a.s.";
                     padding-bottom: 20px;
                     vertical-align: bottom;
                     font-size: 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: "Roboto", sans-serif;
                     font-weight: 400;
                 }
 
                 @bottom-right {
-                    content: counter(page) ' / ' counter(pages);
+                    content: counter(page) " / " counter(pages);
                     padding-bottom: 20px;
                     vertical-align: bottom;
                     font-size: 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: "Roboto", sans-serif;
                 }
             }
 
@@ -46,7 +46,7 @@
             body {
                 margin: 0;
                 color: #2b4762;
-                font-family: 'Roboto', sans-serif;
+                font-family: "Roboto", sans-serif;
             }
 
             h1 {
@@ -94,7 +94,7 @@
             }
 
             .checkbox.checked::before {
-                content: '';
+                content: "";
                 display: block;
                 width: 3px;
                 height: 6px;
@@ -253,7 +253,7 @@
                 padding-top: 40px;
             }
 
-            [data-value=''] {
+            [data-value=""] {
                 display: none;
             }
         </style>
@@ -670,15 +670,6 @@
                         </tr>
                     </tbody>
                 </table>
-                <p class="mb-20">
-                    Tato doba počíná běžet dnem zahájení dodávky do OM Zákazníka
-                    a končí dnem, kdy uplyne výše uvedený počet měsíců od
-                    předpokládaného data zahájení dodávky. Pokud den, kdy uplyne
-                    tato doba, není posledním dnem kalendářního měsíce,
-                    prodlužuje se účinnost Smlouvy až do bezprostředně
-                    následujícího posledního dne kalendářního měsíce.
-                </p>
-
                 <h3>
                     G.5 Automatické prodloužení Smlouvy o rok za ceníkovou cenu
                     Dodavatele
@@ -751,9 +742,8 @@
                     Zákazníka nejméně 30 dní před navrhovaným dnem účinnosti
                     změny. O navrhované změně informuje Dodavatel Zákazníka
                     písemně (např. dopisem nebo prostřednictvím e-mailu).
-                    Dodavatel není povinen, poté, co se doba trvání Smlouvy
-                    změní na dobu neurčitou, poskytovat Zákazníkovi Doplňkové
-                    služby.
+                    Dodavatel není povinen, poté co se doba trvání Smlouvy změní
+                    na dobu neurčitou, poskytovat Zákazníkovi Doplňkové služby.
                 </p>
                 <h3>G.7 Zvýšení ceny a změna jiných smluvních podmínek</h3>
                 <p class="mb-120">
@@ -1388,19 +1378,20 @@
                 </div>
             </div>
             <div class="list__item">
-                <h2>VIII. Zákaznická podpora</h2>
+                <h2>VII. Doba trvání dodávky</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.1.</span>
-                        Dodavatel se zavazuje zajistit pro Zákazníka zákaznickou
-                        podporu. Zákaznická podpora slouží pro řešení problémů
-                        týkajících se dodávky Plynu, včetně otázek vyúčtování
-                        ceny.
-                    </div>
-                    <div class="lower-alpha__item lower-alpha__item--number">
-                        <span class="lower-alpha__letter">8.2.</span>
-                        Dodavatel je povinen sdělit Zákazníkovi kontaktní údaje
-                        pro zajištění služeb zákaznické podpory.
+                        <span class="lower-alpha__letter">7.1.</span>
+                        Doba trvání dodávky je uvedena ve Smlouvě. Dodávku lze
+                        sjednat pouze na dobu určitou, a to buď 12 nebo 24
+                        měsíců, přičemž platí, že tato doba počíná běžet dnem
+                        zahájení dodávky do OM Zákazníka a končí dnem, kdy
+                        uplyne daný počet měsíců od předpokládaného (nikoli
+                        skutečného) data zahájení dodávky. Současně, pokud den,
+                        kdy uplyne tato doba, není posledním dnem kalendářního
+                        měsíce, prodlužuje se dodávka až do bezprostředně
+                        následujícího posledního dne kalendářního měsíce. Datum
+                        konce dodávky je vždy uvedeno ve Smlouvě.
                     </div>
                 </div>
             </div>
@@ -1487,7 +1478,6 @@
                     <div
                         class="
                             lower-alpha__item lower-alpha__item--number
-                            page-break-before
                         "
                     >
                         <span class="lower-alpha__letter">9.4.</span>
