--- a/pdf-export/patterns-of-contracts/contract-power-fo.html
+++ b/pdf-export/patterns-of-contracts/contract-power-fo.html
@@ -1457,7 +1457,7 @@
                 </div>
             </div>
             <div class="list__item">
-                <h2>VII. Zákaznická podpora</h2>
+                <h2>VIII. Zákaznická podpora</h2>
                 <div>
                     <div class="lower-alpha__item lower-alpha__item--number">
                         <span class="lower-alpha__letter">8.1.</span>
